Bug 28413.  Correct computation of total leaks.  r=warren@netscape.com  a=rickg@netscape.com